shrink the profile pics made not tags work by fixing spacing bug extracted new partial to hold tweet template

--- a/app/assets/stylesheets/modules/twitter_view.css.scss
+++ b/app/assets/stylesheets/modules/twitter_view.css.scss
@@ -24,9 +24,20 @@
   float:left;
 }
 
-.tweetMenu > a
+.tweetMenu
 {
-  padding: 5px 10px;
+  .actions
+  {
+    a
+    {
+      padding: 5px;
+      
+      &:first-child
+      {
+        padding-left:0px;
+      }
+    }
+  }
 }
 
 
